feat(cv): Refactor code